--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 asgiref==3.6.0
 Django==4.1.7
+gunicorn==20.1.0
 pip==23.0.1
-setuptools==67.3.2
+setuptools==67.4.0
 sqlparse==0.4.3
 tzdata==2022.7
 wheel==0.38.4
